[gd_scene load_steps=8 format=3 uid="uid://dxg6xnnc3ip0w"]

[ext_resource type="Script" path="res://world.gd" id="1_an1su"]
[ext_resource type="Texture2D" uid="uid://chcinktwahdfs" path="res://addons/kenney_particle_pack/circle_05.png" id="3_2lvpb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_q0uo8"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2qnwh"]
sky_material = SubResource("ProceduralSkyMaterial_q0uo8")

[sub_resource type="Environment" id="Environment_tglyo"]
background_mode = 2
sky = SubResource("Sky_2qnwh")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q302u"]
bg_color = Color(0.972549, 0.0392157, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m110e"]
bg_color = Color(0.180392, 0.709804, 0.141176, 1)

[node name="World" type="Node"]
script = ExtResource("1_an1su")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tglyo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 397.0
offset_top = 225.0
offset_right = -397.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsLabel" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player Settings:"

[node name="Name" type="HBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Name"]
layout_mode = 2
text = "Name:"

[node name="NameEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Name"]
layout_mode = 2
text = "Player"

[node name="Color" type="HBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Color"]
layout_mode = 2
text = "Color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Color"]
layout_mode = 2
text = "Player Color"
color = Color(0.478431, 0.537255, 0, 1)
edit_alpha = false

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Adress to Join"
alignment = 1

[node name="LobbyMenu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 397.0
offset_top = 225.0
offset_right = -397.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/LobbyMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LobbyMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsLabel" type="Label" parent="CanvasLayer/LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Connected Players:"

[node name="StartButton" type="Button" parent="CanvasLayer/LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_2lvpb")
stretch_mode = 3

[node name="Healtbar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 257.0
offset_top = 47.0
offset_right = -257.0
offset_bottom = -555.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_q302u")
theme_override_styles/fill = SubResource("StyleBoxFlat_m110e")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LobbyMenu/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
